[gd_scene load_steps=9 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://DB.tscn" type="PackedScene" id=2]
[ext_resource path="res://Styles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Score.tscn" type="PackedScene" id=4]
[ext_resource path="res://HowToPlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utils.tscn" type="PackedScene" id=6]
[ext_resource path="res://EditData.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.568627, 0.737255, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1100.0
margin_bottom = 601.0

[node name="VLayout" type="VBoxContainer" parent="CenterContainer"]
margin_left = 39.0
margin_top = 56.0
margin_right = 1061.0
margin_bottom = 544.0
rect_min_size = Vector2( 1000, 246 )
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VLayout"]
margin_right = 1022.0
margin_bottom = 30.0
alignment = 1

[node name="HowToPlayButton" type="Button" parent="CenterContainer/VLayout/HBoxContainer"]
margin_left = 461.0
margin_right = 561.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "How To Play"

[node name="OrganismColumns" type="HBoxContainer" parent="CenterContainer/VLayout"]
margin_top = 50.0
margin_right = 1022.0
margin_bottom = 80.0

[node name="Organism1" type="Panel" parent="CenterContainer/VLayout/OrganismColumns"]
margin_right = 482.0
margin_bottom = 30.0
rect_min_size = Vector2( 482, 30 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/VLayout/OrganismColumns/Organism1"]
margin_right = 477.0
margin_bottom = 30.0
text = "Organism1"
align = 2
valign = 1

[node name="SourceHeaderCenter" type="Panel" parent="CenterContainer/VLayout/OrganismColumns"]
margin_left = 486.0
margin_right = 536.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/VLayout/OrganismColumns/SourceHeaderCenter"]
margin_right = 50.0
margin_bottom = 30.0
text = "-"
align = 1
valign = 1

[node name="Organism2" type="Panel" parent="CenterContainer/VLayout/OrganismColumns"]
margin_left = 540.0
margin_right = 1022.0
margin_bottom = 30.0
rect_min_size = Vector2( 482, 30 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/VLayout/OrganismColumns/Organism2"]
margin_left = 7.0
margin_top = -1.0
margin_right = 156.0
margin_bottom = 29.0
text = "Organism2"
valign = 1

[node name="HeaderSeparator" type="HSeparator" parent="CenterContainer/VLayout"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 100.0
margin_right = 1022.0
margin_bottom = 104.0

[node name="FSeqColumns" type="HBoxContainer" parent="CenterContainer/VLayout"]
margin_top = 124.0
margin_right = 1022.0
margin_bottom = 224.0
rect_min_size = Vector2( 1022, 100 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeqSeparator" type="HSeparator" parent="CenterContainer/VLayout"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 244.0
margin_right = 1022.0
margin_bottom = 248.0

[node name="SSeqColumns" type="HBoxContainer" parent="CenterContainer/VLayout"]
margin_top = 268.0
margin_right = 1022.0
margin_bottom = 368.0
rect_min_size = Vector2( 1022, 100 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSeparator" type="HSeparator" parent="CenterContainer/VLayout"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
light_mask = 0
margin_top = 388.0
margin_right = 1022.0
margin_bottom = 438.0
custom_constants/separation = 50

[node name="ButtonColumns" type="HBoxContainer" parent="CenterContainer/VLayout"]
margin_top = 458.0
margin_right = 1022.0
margin_bottom = 488.0
rect_min_size = Vector2( 30, 30 )
alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/VLayout/ButtonColumns"]
margin_left = 325.0
margin_right = 442.0
margin_bottom = 30.0
text = "Restart the level"

[node name="SubmitButton" type="Button" parent="CenterContainer/VLayout/ButtonColumns"]
margin_left = 446.0
margin_right = 569.0
margin_bottom = 30.0
text = "Submit Sequence"

[node name="ChangeButton" type="Button" parent="CenterContainer/VLayout/ButtonColumns"]
margin_left = 573.0
margin_right = 697.0
margin_bottom = 30.0
text = "Change Sequence"

[node name="EditTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="EditData" parent="." instance=ExtResource( 7 )]

[node name="HowToPlay" parent="." instance=ExtResource( 5 )]

[node name="Score" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Utils" parent="." instance=ExtResource( 6 )]

[node name="DB" parent="." instance=ExtResource( 2 )]

[node name="Styles" parent="." instance=ExtResource( 3 )]

[connection signal="Request_end" from="." to="." method="show_sequence"]
[connection signal="pressed" from="CenterContainer/VLayout/HBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VLayout/ButtonColumns/RestartButton" to="." method="restart"]
[connection signal="pressed" from="CenterContainer/VLayout/ButtonColumns/SubmitButton" to="." method="submitData"]
[connection signal="pressed" from="CenterContainer/VLayout/ButtonColumns/ChangeButton" to="." method="changeSeq"]
[connection signal="timeout" from="EditTimer" to="." method="_on_EditTimer_timeout"]
[connection signal="ClosePressed" from="HowToPlay" to="." method="_on_HowToPlay_ClosePressed"]
[connection signal="best_align" from="DB" to="." method="_on_best_align_recived"]
[connection signal="request_finished" from="DB" to="." method="JSData"]
[connection signal="score_recived" from="DB" to="." method="_on_DB_score_recived"]
